--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-HOST=0.0.0.0
-PORT=1337
+DATABASE_HOST=your-unique-url.rds.amazonaws.com
+DATABASE_PORT=5432
+DATABASE_NAME=strapi
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=Password
+AWS_ACCESS_KEY_ID=aws-access-key-id
+AWS_ACCESS_SECRET=aws-access-secret
+AWS_REGION=aws-region
+AWS_BUCKET_NAME=my-project-bucket-name
