--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,21 +1,22 @@
 version: 0.2
+
   phases: 
     install:
       runtime-versions:
         nodejs: 12
-      #commands:
-    pre_build:
-      commands:
-        - 'npm install'
-    build: 
-      commands:
-      - 'npm run build'
-    post_build:
-      commands:
-        - 'npm run start'
-  artifacts:
-    #base-directory: strapi
-    base-directory: addo-strapi-blueprint
-    files:        
-        - '**/*'    
-    discard-paths: yes
+#       #commands:
+#     pre_build:
+#       commands:
+#         - 'npm install'
+#     build: 
+#       commands:
+#       - 'npm run build'
+#     post_build:
+#       commands:
+#         - 'npm run start'
+#   artifacts:
+#     #base-directory: strapi
+#     base-directory: addo-strapi-blueprint
+#     files:        
+#         - '**/*'    
+#     discard-paths: yes
