--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
   phases: 
     install:
       runtime-versions:
+        - echo Installing nodejs
         nodejs: 12
   pre_build:
     commands:
