--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -4,6 +4,10 @@ files:
   - source: /
     destination: /home/addo-strapi-blueprint
 hooks:
+  BeforeInstall:
+    - location:: script/remove_nodemodules.sh
+      timeout: 300
+      runas: root
   AfterInstall:
     - location: scripts/start_server.sh
       timeout: 300
