--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "strapi-plugin-content-type-builder": "3.6.2",
     "strapi-plugin-email": "3.6.2",
     "strapi-plugin-i18n": "3.6.2",
+    "strapi-plugin-import-export-content": "^0.4.1",
     "strapi-plugin-upload": "3.6.2",
     "strapi-plugin-users-permissions": "3.6.2",
     "strapi-provider-upload-aws-s3": "^3.6.2",
